--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body{
     background-color: #e5e5e5;
 }
 .app{
-width: 300px;height: 500px;
+width: 300px;
 border: 5px solid #abcea1;
 border-radius: 8px;
 padding: 15px;
